run tests to evaluate observer effect