@@ -92,7 +92,7 @@ public class CaptureMonitor {
     if (isInside.get() || array == null) return;
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, siteId);
       if (roleId == -1) {
         return;
@@ -199,7 +199,7 @@ public class CaptureMonitor {
     }
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) {
         try { return findField(ownerName, fieldName).getInt(owner); }
@@ -246,7 +246,7 @@ public class CaptureMonitor {
     }
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) {
         try { return findField(ownerName, fieldName).getFloat(owner); }
@@ -286,7 +286,7 @@ public class CaptureMonitor {
     }
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) {
         try { return findField(ownerName, fieldName).getLong(owner); }
@@ -326,7 +326,7 @@ public class CaptureMonitor {
     }
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) {
         try { return findField(ownerName, fieldName).getDouble(owner); }
@@ -366,7 +366,7 @@ public class CaptureMonitor {
     }
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) {
         try { return findField(ownerName, fieldName).get(owner); }
@@ -408,7 +408,7 @@ public class CaptureMonitor {
     if (isInside.get()) return;
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) return;
       BirthId birthId = IdentityMapper.getBirthId(owner, ownerName, currentSiteId);
@@ -447,7 +447,7 @@ public class CaptureMonitor {
     if (isInside.get()) return;
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) return;
       BirthId birthId = IdentityMapper.getBirthId(owner, ownerName, currentSiteId);
@@ -479,7 +479,7 @@ public class CaptureMonitor {
     if (isInside.get()) return;
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) return;
       BirthId birthId = IdentityMapper.getBirthId(owner, ownerName, currentSiteId);
@@ -511,7 +511,7 @@ public class CaptureMonitor {
     if (isInside.get()) return;
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) return;
       BirthId birthId = IdentityMapper.getBirthId(owner, ownerName, currentSiteId);
@@ -543,7 +543,7 @@ public class CaptureMonitor {
     if (isInside.get()) return;
     isInside.set(true);
     try {
-      long tid = Thread.currentThread().threadId();
+      long tid = Thread.currentThread().getId();
       int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
       if (roleId == -1) return;
       BirthId birthId = IdentityMapper.getBirthId(owner, ownerName, currentSiteId);
