@@ -31,7 +31,7 @@ public class ReplayMonitor {
             && eventType != BinarySchema.Event.CLASS_INIT_END) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -58,7 +58,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -89,7 +89,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -123,7 +123,7 @@ public class ReplayMonitor {
         }
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) {
                 try { return findField(ownerName, fieldName).getInt(owner); }
@@ -167,7 +167,7 @@ public class ReplayMonitor {
         }
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) {
                 try { return findField(ownerName, fieldName).getFloat(owner); }
@@ -204,7 +204,7 @@ public class ReplayMonitor {
         }
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) {
                 try { return findField(ownerName, fieldName).getLong(owner); }
@@ -241,7 +241,7 @@ public class ReplayMonitor {
         }
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) {
                 try { return findField(ownerName, fieldName).getDouble(owner); }
@@ -278,7 +278,7 @@ public class ReplayMonitor {
         }
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) {
                 try { return findField(ownerName, fieldName).get(owner); }
@@ -323,7 +323,7 @@ public class ReplayMonitor {
         }
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) {
                 Class<?> comp = array.getClass().getComponentType();
@@ -363,7 +363,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return array != null ? ((float[]) array)[index] : 0f;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return ((float[]) array)[index];
 
@@ -389,7 +389,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return array != null ? ((long[]) array)[index] : 0L;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return ((long[]) array)[index];
 
@@ -415,7 +415,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return array != null ? ((double[]) array)[index] : 0.0;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return ((double[]) array)[index];
 
@@ -441,7 +441,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return array != null ? ((Object[]) array)[index] : null;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return ((Object[]) array)[index];
 
@@ -475,7 +475,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -502,7 +502,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -538,7 +538,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -568,7 +568,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -598,7 +598,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -628,7 +628,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -660,7 +660,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -690,7 +690,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -714,7 +714,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -738,7 +738,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -763,7 +763,7 @@ public class ReplayMonitor {
         if (isInside.get() || array == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -822,7 +822,7 @@ public class ReplayMonitor {
         if (isInside.get()) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
             if (roleId == -1) return;
 
@@ -861,7 +861,7 @@ public class ReplayMonitor {
         if (isInside.get()) return 0;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
 
             BirthId receiverBirth = IdentityMapper.getBirthId(receiver, null, currentSiteId);
@@ -900,7 +900,7 @@ public class ReplayMonitor {
         if (isInside.get()) return 0L;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
 
             BirthId receiverBirth = IdentityMapper.getBirthId(receiver, null, currentSiteId);
@@ -941,7 +941,7 @@ public class ReplayMonitor {
         if (isInside.get()) return null;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, currentSiteId);
 
             BirthId receiverBirth = IdentityMapper.getBirthId(receiver, null, currentSiteId);
@@ -981,7 +981,7 @@ public class ReplayMonitor {
         if (exception == null) return;
         isInside.set(true);
         try {
-            long tid = Thread.currentThread().threadId();
+            long tid = Thread.currentThread().getId();
             int roleId = IdentityMapper.getRoleIdBySite(tid, siteId);
             if (roleId == -1) return;
 
@@ -1004,7 +1004,7 @@ public class ReplayMonitor {
         try {
             // Assign this thread's roleId now, before it runs a single instruction.
             // Uses the next expected role from the trace at the current idx.
-            long tid = thread.threadId();
+            long tid = thread.getId();
             int nextRole = ReplayCoordinator.peekNextPendingRole();
             if (nextRole == -1) return;
 
